--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,46 +1,46 @@
 .appWrapper {
-    padding: 20px 10px;
-
+    padding: 20px 5px;
+    background-color: #e6fffb;
+    max-width: 1500px;
+    margin: 0 auto;
 }
 
 .header {
-    border: 1px solid green;
+    padding: 5px 0px 15px 15px;
     margin-bottom: 15px;
-}
-
-.logoHeader {
-
 }
 
 .header img {
     width: 80px;
     height: 80px;
+    border-radius: 50%;
+    color: #fa89ff;
 }
 
 .body {
     display: flex;
-    justify-content: space-between;
+
+    height: 100%;
+    margin-bottom: 15px;
 }
 
 .navBar {
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     min-width: 250px;
-    padding: 10px;
+    padding: 15px;
     margin-bottom: 15px;
     margin-right: 15px;
-}
-
-.content {
 
 }
 
-.content img {
-    display: inline-block;
-    max-width: 1500px;
-    height: 400px;
-    opacity: 70%;
+.dialogs {
+
+}
+
+.profile {
+    width: 100%;
+    margin-bottom: 15px;
 }
 
 .footer {
