--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,6 +22,7 @@
 
     height: 100%;
     margin-bottom: 15px;
+
 }
 
 .navBar {
@@ -29,12 +30,18 @@
     flex-direction: column;
     min-width: 250px;
     padding: 15px;
-    margin-bottom: 15px;
-    margin-right: 15px;
+    /*margin-bottom: 15px;*/
+    /*margin-right: 15px;*/
+    margin: 0 15px 15px 0;
 
 }
 
 .dialogs {
+    display: flex;
+    width: 100%;
+    border: 1px solid red;
+
+    /*border: 1px solid red;*/
 
 }
 
@@ -43,8 +50,3 @@
     margin-bottom: 15px;
 }
 
-.footer {
-    border: 1px solid green;
-    display: flex;
-    justify-content: center;
-}
