--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -1,20 +1,38 @@
 .dialogs {
     display: flex;
+    width: 100%;
 
+
+    /*border: 1px solid red;*/
 }
 
 .dialogsItem {
     display: flex;
     flex-direction: column;
     margin-right: 140px;
+
+    /*border: 1px solid red;*/
+
+}
+
+.messagesItems {
+    width: 100%;
+    display: flex;
+    
+    justify-content: space-between;
+    padding: 30px;
+    /*border: 1px solid red;*/
+
+}
+
+.messageLeft {
+
 }
 
 
+.messageRight {
 
-
-
-
-
+}
 
 
 
