--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -15,10 +15,44 @@
 
 }
 
+.textareaAndButtonDialogs {
+
+}
+
+.dialogsTextArea {
+    margin-bottom: 10px;
+}
+
+.dialogsTextArea textarea {
+    width: 300px;
+    height: 30px;
+    background-color: #d7fd61;
+    border: 1px solid #fa89ff;
+
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 5px 5px 5px 15px;
+}
+
+.dialogsButtonSend {
+
+}
+
+.dialogsButtonSend button {
+    width: 100px;
+    height: 30px;
+    background-color: #d7fd61;
+    color: #fa89ff;
+    font-weight: 700;
+    font-size: 18px;
+    border: 1px solid #fa89ff;
+    border-radius: 15px;
+}
+
 .messagesItems {
     width: 100%;
     display: flex;
-    
+
     justify-content: space-between;
     padding: 30px;
     /*border: 1px solid red;*/
