55 - React JS практика - pagination, постраничный вывод пользователей

--- a/src/components/users/user/User.module.css
+++ b/src/components/users/user/User.module.css
@@ -2,6 +2,10 @@
     width: 50%;
 }
 
+.selectedPage {
+    font-weight: 700;
+}
+
 .userBlock {
     display: flex;
     justify-content: space-between;
